ADD_SUBDIRECTORY(icons)
FIND_PACKAGE( libpar2 REQUIRED )
FIND_PACKAGE( libsigc REQUIRED )

INCLUDE_DIRECTORIES( ${KDE3_INCLUDE_DIRS}
                     ${CMAKE_CURRENT_BINARY_DIR}
                     ${CMAKE_CURRENT_SOURCE_DIR}
                     ${LIBSIGC_INCLUDE_DIRS}
                     ${LIBPAR2_INCLUDE_DIRS} )

IF( CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT )
    SET( CMAKE_INSTALL_PREFIX ${KDE3PREFIX} CACHE PATH "kpar2 install prefix" FORCE )
ENDIF( CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT )

IF( NOT KPAR2_BIN_INSTALL_DIR )
    SET( KPAR2_BIN_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/bin CACHE PATH "kpar2 binary install path" )
ENDIF( NOT KPAR2_BIN_INSTALL_DIR )

SET( SRC main.cpp kpar2.cpp )
SET( KPART_SRC kpar2object.cpp
               kpar2part.cpp
               kpar2thread.cpp )
SET( KPART_UI_SRC kpar2gui.ui generalsettings.ui )
ADD_DEFINITIONS( ${QT_DEFINITIONS} ${KDE3_DEFINITIONS} )
LINK_DIRECTORIES( ${KDE3_LIB_DIR} )
KDE3_ADD_UI_FILES( KPART_SRC ${KPART_UI_SRC} )
KDE3_ADD_KCFG_FILES( KPART_SRC kpar2settings.kcfgc )
KDE3_AUTOMOC( ${KPART_SRC} ${SRC} )
KDE3_ADD_EXECUTABLE( kpar2 ${SRC} )
KDE3_ADD_KPART( kpar2part WITH_PREFIX ${KPART_SRC} )
TARGET_LINK_LIBRARIES( kpar2 ${QT_AND_KDECORE_LIBS} kdeui kio kparts )
TARGET_LINK_LIBRARIES( kpar2part ${QT_AND_KDECORE_LIBS} ${LIBSIGC_LIBRARY} ${LIBPAR2_LIBRARY} kio kparts )
INSTALL(TARGETS kpar2 kpar2part
        RUNTIME DESTINATION ${KPAR2_BIN_INSTALL_DIR}
        LIBRARY DESTINATION ${KDE3_LIB_DIR}/kde3
        ARCHIVE DESTINATION ${KDE3_LIB_DIR}/kde3 )
INSTALL( FILES kpar2.desktop DESTINATION ${CMAKE_INSTALL_PREFIX}/share/applications/kde )
INSTALL( FILES kpar2part.desktop DESTINATION ${CMAKE_INSTALL_PREFIX}/share/services )
INSTALL( FILES x-par2.desktop DESTINATION ${CMAKE_INSTALL_PREFIX}/share/mimelnk/application )
INSTALL( FILES kpar2ui.rc kpar2part.rc DESTINATION ${CMAKE_INSTALL_PREFIX}/share/apps/kpar2 )
MARK_AS_ADVANCED( KPAR2_BIN_INSTALL_DIR LIBSIGC_INCLUDE_DIR LIBSIGC_LIB_INCLUDE_DIR LIBSIGC_LIBRARY LIBPAR2_INCLUDE_DIR LIBPAR2_LIB_INCLUDE_DIR LIBPAR2_LIBRARY )
