FIND_PACKAGE( libpar2 REQUIRED )
FIND_PACKAGE( libsigc++ REQUIRED )
FIND_PACKAGE( KDE3 REQUIRED )
INCLUDE_DIRECTORIES(${KDE3_INCLUDE_DIRS}
                    ${LIBSIGC++_INCLUDE_DIRS}
                    ${LIBPAR2_INCLUDE_DIRS}
                    ${CMAKE_CURRENT_BINARY_DIR}
                    ${CMAKE_CURRENT_SOURCE_DIR} )
SET( SRC main.cpp kpar2.cpp )
SET( KPART_SRC kpar2_part.cpp kpar2thread.cpp kpar2object.cpp )
SET( KPART_UI kpar2gui.ui )
KDE3_ADD_UI_FILES( KPART_UI_SRC ${KPART_UI} )
KDE3_AUTOMOC( ${SRC} ${KPART_UI_SRC} ${KPART_SRC} )
ADD_DEFINITIONS( ${KDE3_DEFINITIONS} ${QT_DEFINITIONS} )
LINK_DIRECTORIES( ${KDE3_LIB_DIR} )
KDE3_ADD_KPART( kpar2part WITH_PREFIX ${KPART_SRC} ${KPART_UI_SRC} )
KDE3_ADD_EXECUTABLE( kpar2  ${SRC} )
TARGET_LINK_LIBRARIES( kpar2part ${QT_AND_KDECORE_LIBS} ${LIBSIGC++_LIBRARY} ${LIBPAR2_LIBRARY} kparts )
TARGET_LINK_LIBRARIES( kpar2 ${QT_AND_KDECORE_LIBS} kparts )
INSTALL(TARGETS kpar2 kpar2part
        RUNTIME DESTINATION $ENV{KDEDIR}/bin
        LIBRARY DESTINATION $ENV{KDEDIR}/lib/kde3 )
INSTALL( FILES kpar2.desktop DESTINATION $ENV{KDEDIR}/share/applnk/Utilities )
INSTALL( FILES kpar2_part.desktop DESTINATION $ENV{KDEDIR}/share/services )
INSTALL( FILES kpar2_shell.rc DESTINATION $ENV{KDEDIR}/share/apps/kpar2 )
INSTALL( FILES kpar2_part.rc DESTINATION $ENV{KDEDIR}/share/apps/kpar2part )
