FIND_PACKAGE( libpar2 REQUIRED )
FIND_PACKAGE( libsigc REQUIRED )
SET( QT_MT_REQUIRED TRUE )
FIND_PACKAGE( KDE3 REQUIRED )
INCLUDE_DIRECTORIES(${KDE3_INCLUDE_DIRS}
                    ${LIBSIGC_INCLUDE_DIRS}
                    ${LIBPAR2_INCLUDE_DIRS}
                    ${CMAKE_CURRENT_BINARY_DIR}
                    ${CMAKE_CURRENT_SOURCE_DIR} )

IF( CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT )
    SET( CMAKE_INSTALL_PREFIX ${KDE3PREFIX} CACHE PATH "kpar2 install prefix" FORCE )
ENDIF( CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT )

IF( NOT KPAR2_BIN_INSTALL_DIR )
    SET( KPAR2_BIN_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/bin CACHE PATH "kpar2 binary install path" )
ENDIF( NOT KPAR2_BIN_INSTALL_DIR )

SET( KPART_SRC kpar2_part.cpp kpar2thread.cpp kpar2object.cpp kpar2gui_images.cpp )
SET( KPART_UI kpar2gui.ui )
SET( SRC main.cpp kpar2.cpp )
ADD_DEFINITIONS( ${QT_DEFINITIONS} ${KDE3_DEFINITIONS} )
LINK_DIRECTORIES( ${KDE3_LIB_DIR} )
KDE3_ADD_UI_FILES( KPART_SRC ${KPART_UI} )
KDE3_ADD_KCFG_FILES( KPART_SRC kpar2guisettings.kcfgc )
KDE3_AUTOMOC( ${KPART_SRC} ${SRC} )
KDE3_ADD_KPART( kpar2part WITH_PREFIX ${KPART_SRC} )
KDE3_ADD_EXECUTABLE( kpar2 ${SRC} )
TARGET_LINK_LIBRARIES( kpar2part ${QT_AND_KDECORE_LIBS} ${LIBSIGC_LIBRARY} ${LIBPAR2_LIBRARY} kparts )
TARGET_LINK_LIBRARIES( kpar2 ${QT_AND_KDECORE_LIBS} kparts )
INSTALL(TARGETS kpar2 kpar2part
        RUNTIME DESTINATION ${KPAR2_BIN_INSTALL_DIR}
        LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/kde3
        ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/kde3 )
INSTALL( FILES kpar2.desktop DESTINATION ${CMAKE_INSTALL_PREFIX}/share/applications/kde )
INSTALL( FILES kpar2_part.desktop DESTINATION ${CMAKE_INSTALL_PREFIX}/share/services )
INSTALL( FILES x-par2.desktop DESTINATION ${CMAKE_INSTALL_PREFIX}/share/mimelnk/application )
INSTALL( FILES kpar2_shell.rc DESTINATION ${CMAKE_INSTALL_PREFIX}/share/apps/kpar2 )
INSTALL( FILES kpar2_part.rc DESTINATION ${CMAKE_INSTALL_PREFIX}/share/apps/kpar2part )
