ADD_SUBDIRECTORY(icons)
FIND_PACKAGE( libpar2 REQUIRED )
FIND_PACKAGE( libsigc REQUIRED )

INCLUDE_DIRECTORIES( ${KDE4_INCLUDE_DIRS}
                     ${CMAKE_CURRENT_BINARY_DIR}
                     ${CMAKE_CURRENT_SOURCE_DIR}
                     ${LIBSIGC_INCLUDE_DIRS}
                     ${LIBPAR2_INCLUDE_DIRS} )

IF( NOT KPAR2_BIN_INSTALL_DIR )
    SET( KPAR2_BIN_INSTALL_DIR ${KDE4_BIN_INSTALL_DIR} CACHE PATH "kpar2 binary install path" )
ENDIF( NOT KPAR2_BIN_INSTALL_DIR )

SET( KPART_SRC kpar2part.cpp kpar2thread.cpp kpar2object.cpp settings.cpp )
SET( KPART_UI kpar2gui.ui generalsettings.ui )
SET( SRC main.cpp kpar2.cpp )
ADD_DEFINITIONS( ${QT_DEFINITIONS} ${KDE4_DEFINITIONS} )
LINK_DIRECTORIES( ${KDE4_LIB_DIR} )
KDE4_ADD_UI_FILES( KPART_SRC ${KPART_UI} )
KDE4_ADD_KCFG_FILES( KPART_SRC kpar2settings.kcfgc )
KDE4_ADD_PLUGIN( kpar2part ${KPART_SRC} )
KDE4_ADD_EXECUTABLE( kpar2 ${SRC} )
TARGET_LINK_LIBRARIES( kpar2part ${KDE4_KDECORE_LIBS} ${KDE4_KIO_LIBS} ${KDE4_KPARTS_LIBS} ${LIBSIGC_LIBRARY} ${LIBPAR2_LIBRARY} )
TARGET_LINK_LIBRARIES( kpar2 ${KDE4_KDECORE_LIBS} ${KDE4_KIO_LIBS} ${KDE4_KDEUI_LIBS} ${KDE4_KPARTS_LIBS} )
INSTALL(TARGETS kpar2 kpar2part
        RUNTIME DESTINATION ${KPAR2_BIN_INSTALL_DIR}
        LIBRARY DESTINATION ${PLUGIN_INSTALL_DIR}
        ARCHIVE DESTINATION ${PLUGIN_INSTALL_DIR} )
INSTALL( FILES kpar2.desktop DESTINATION ${KDE4_XDG_APPS_INSTALL_DIR} )
INSTALL( FILES kpar2part.desktop DESTINATION ${PLUGIN_INSTALL_DIR} )
INSTALL( FILES x-par2.desktop DESTINATION ${MIME_INSTALL_DIR} )
INSTALL( FILES kpar2.rc kpar2part.rc DESTINATION ${DATA_INSTALL_DIR}/kpar2 )
MARK_AS_ADVANCED( KPAR2_BIN_INSTALL_DIR LIBSIGC_INCLUDE_DIR LIBSIGC_LIB_INCLUDE_DIR LIBSIGC_LIBRARY LIBPAR2_INCLUDE_DIR LIBPAR2_LIB_INCLUDE_DIR LIBPAR2_LIBRARY )
